1.Add <GCVM using="1" /> in inifile when using GCVMModel, to control using GCVM or CVM 2.Add a new model AGCVMModel (Anticipation generalized collision-free velocity model) (Will be implemented)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -320,7 +320,7 @@ math/VelocityModel.cpp
 math/OperationalModel.cpp
 math/GCVMModel.cpp
 math/SimplestModel.cpp
-
+math/AGCVMModel.cpp
 mpi/LCGrid.cpp
 
 pedestrian/Ellipse.cpp
@@ -550,7 +550,7 @@ math/VelocityModel.h
 math/OperationalModel.h
 math/GCVMModel.h
 math/SimplestModel.h
-
+math/AGCVMModel.h
 events/EventManager.h
 events/Event.h
 
