--- a/libjupedsim/CMakeLists.txt
+++ b/libjupedsim/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(jupedsim_obj OBJECT
     src/collision_free_speed_model.cpp
     src/collision_free_speed_model_v2.cpp
     src/anticipation_velocity_model.cpp
+    src/push_propagation_model.cpp
     src/error.cpp
     src/generalized_centrifugal_force_model.cpp
     src/geometry.cpp
@@ -114,6 +115,7 @@ install(
         ${header_dest}/collision_free_speed_model.h
         ${header_dest}/collision_free_speed_model_v2.h
         ${header_dest}/anticipation_velocity_model.h
+        ${header_dest}/push_propagation_model.h
         ${header_dest}/error.h
         ${header_dest}/export.h
         ${header_dest}/generalized_centrifugal_force_model.h
